@@ -8,7 +8,7 @@ import jakarta.persistence.Entity;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
-import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
 import jakarta.persistence.OneToMany;
 
 @Entity
@@ -18,88 +18,24 @@ public class Administrador {
     private long id;
     private String nome;
     private String registro;
-    @OneToMany(cascade={CascadeType.MERGE,CascadeType.REFRESH})
-    @JoinColumn(name="admininstrador_id")
+
+    @OneToMany(cascade = {CascadeType.MERGE, CascadeType.REFRESH})
     private List<OperadorCaixa> operadoresSupervisionados;
-    public List<OperadorCaixa> getOperadoresSupervisionados() {
-        return operadoresSupervisionados;
-    }
-        @OneToMany(cascade={CascadeType.MERGE,CascadeType.REFRESH})
-        @JoinColumn(name="admininstrador_id")
-        private List<Farmaceutico> farmaceuticoSupervisionados = new ArrayList<>();
-    
-        public List<Farmaceutico> getFarmaceuticoSupervisionados() {
-            return farmaceuticoSupervisionados;
-        }
 
-        public void setFarmaceuticoSupervisionados(List<Farmaceutico> farmaceuticoSupervisionados) {
-            this.farmaceuticoSupervisionados = farmaceuticoSupervisionados;
-        }
+    @OneToMany(mappedBy = "administrador", cascade = CascadeType.ALL)
+    private List<Farmaceutico> farmaceuticos = new ArrayList<>();
 
-        public void adicionarFarmaceuticoSupervisionado(Farmaceutico farmaceutico) {
-            farmaceuticoSupervisionados.add(farmaceutico);
-        }
-    
-    public void setOperadoresSupervisionados(List<OperadorCaixa> operadoresSupervisionados) {
-        this.operadoresSupervisionados = operadoresSupervisionados;
-    }
-
-
-    @OneToMany(cascade={CascadeType.MERGE,CascadeType.REFRESH})
-    @JoinColumn(name="admininstrador_id")
-    public List<Farmaceutico> getFarmaceuticosSupervisionados() {
-        return farmaceuticosSupervisionados;
-    }
-
-
-    public void setFarmaceuticosSupervisionados(List<Farmaceutico> farmaceuticosSupervisionados) {
-        this.farmaceuticosSupervisionados = farmaceuticosSupervisionados;
-    }
-
-
-    public GerenteEstoque getGerenteDeEstoqueSupervisionado() {
-        return gerenteDeEstoqueSupervisionado;
-    }
-
-
-    public void setGerenteDeEstoqueSupervisionado(GerenteEstoque gerenteDeEstoqueSupervisionado) {
-        this.gerenteDeEstoqueSupervisionado = gerenteDeEstoqueSupervisionado;
-    }
-
-    @OneToMany(cascade={CascadeType.MERGE,CascadeType.REFRESH})
-    @JoinColumn(name="admininstrador_id")
-    private List<Farmaceutico> farmaceuticosSupervisionados;
+    @ManyToOne(cascade = {CascadeType.MERGE, CascadeType.REFRESH})
     private GerenteEstoque gerenteDeEstoqueSupervisionado;
-    public String getRegistro() {
-        return registro;
-    }
-
-
-    public void setRegistro(String registro) {
-        this.registro = registro;
-    }
-
-
-    public void setId(long id) {
-        this.id = id;
-    }
-
-
-    public int getTelefone() {
-        return telefone;
-    }
-
-    public void setTelefone(int telefone) {
-        this.telefone = telefone;
-    }
 
     private int telefone;
 
-    public Long getId() {
+    // Getters and setters
+    public long getId() {
         return id;
     }
 
-    public void setId(Long id) {
+    public void setId(long id) {
         this.id = id;
     }
 
@@ -109,22 +45,56 @@ public class Administrador {
 
     public void setNome(String nome) {
         this.nome = nome;
-
     }
+
+    public String getRegistro() {
+        return registro;
+    }
+
+    public void setRegistro(String registro) {
+        this.registro = registro;
+    }
+
+    public List<OperadorCaixa> getOperadoresSupervisionados() {
+        return operadoresSupervisionados;
+    }
+
+    public void setOperadoresSupervisionados(List<OperadorCaixa> operadoresSupervisionados) {
+        this.operadoresSupervisionados = operadoresSupervisionados;
+    }
+
+    public List<Farmaceutico> getFarmaceuticos() {
+        return farmaceuticos;
+    }
+
+    public void setFarmaceuticos(List<Farmaceutico> farmaceuticos) {
+        this.farmaceuticos = farmaceuticos;
+    }
+
+    public GerenteEstoque getGerenteDeEstoqueSupervisionado() {
+        return gerenteDeEstoqueSupervisionado;
+    }
+
+    public void setGerenteDeEstoqueSupervisionado(GerenteEstoque gerenteDeEstoqueSupervisionado) {
+        this.gerenteDeEstoqueSupervisionado = gerenteDeEstoqueSupervisionado;
+    }
+
+    public int getTelefone() {
+        return telefone;
+    }
+
+    public void setTelefone(int telefone) {
+        this.telefone = telefone;
+    }
+
     @Override
     public String toString() {
         return "Administrador{" +
             "nome='" + nome + '\'' +
             ", registro='" + registro + '\'' +
-            ", operadoresSupervisionados=" + operadoresSupervisionados.stream().map(OperadorCaixa::getNome).collect(java.util.stream.Collectors.toList()) +
-            ", farmaceuticosSupervisionados=" + farmaceuticosSupervisionados.stream().map(Farmaceutico::getNome).collect(java.util.stream.Collectors.toList()) +
+            ", operadoresSupervisionados=" + operadoresSupervisionados.stream().map(OperadorCaixa::getNome).toList() +
+            ", farmaceuticos=" + farmaceuticos.stream().map(Farmaceutico::getNome).toList() +
             (gerenteDeEstoqueSupervisionado != null ? ", gerenteDeEstoqueSupervisionado=" + gerenteDeEstoqueSupervisionado.getNome() : "") +
             '}';
     }
-
-
-    public void adicionarOperadorSupervisionado(OperadorCaixa operador1) {
-        throw new UnsupportedOperationException("Unimplemented method 'adicionarOperadorSupervisionado'");
-    }
-
 }
